[project]
name = "warehouse-spartial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.2.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pycocotools>=2.0.11",
    "python-dotenv>=1.2.1",
]
