[project]
name = "warehouse-spartial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "dvc>=3.64.2",
    "dvc-s3>=3.2.2",
    "fastapi>=0.110.0",
    "huggingface-hub>=1.2.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "python-multipart>=0.0.9",
    "pycocotools>=2.0.11",
    "python-dotenv>=1.2.1",
    "roboflow>=1.2.11",
    "ultralytics>=8.3.240",
    "wandb>=0.23.1",
    "uvicorn[standard]>=0.30.0",
]
