[project]
name = "warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.2",
    "python-multipart>=0.0.20",
    "ultralytics>=8.4.6",
    "uvicorn>=0.39.0",
]
